fix: installing package fix

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev:express": "npm --prefix ./express run dev",
     "build:express": "npm --prefix ./express run build",
-    "start:express": "npm --prefix ./express run start"
+    "start:express": "npm --prefix ./express run start",
+    "install:backend": "npm --prefix ./express install && npm --prefix ./deno install"
   },
   "keywords": [],
   "author": "",
